--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ body{
   padding-bottom: 180px
 }
 
+.greeting{
+  height: 70%!important;
+}
 .content-center{
   background-color: rgba(255,255,255,0.75);
   padding: 50px;
@@ -58,7 +61,7 @@ body{
 .masthead {
     height: 100vh;
     min-height: 500px;
-    background-image: url('../images/weg.jpg');
+    background-image: url('../images/view3.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -90,3 +93,17 @@ body{
     /* negative value of footer height */
     clear: both;
   }
+
+  .carousel{
+    height: 600px;
+    background-color: rgba(131, 131, 131, 0.466);
+    padding-top: 25px;
+  }
+
+  .d-block{
+    object-fit: contain;
+    height: 550px;
+  }
+
+  
+
